sass/main.scss
@import "./utils/variables";
@import "./utils/mixins";

body {
    font-family: 'Roboto', sans-serif;
    font-size: 18px;
    font-weight: 300;

    .bloc-page {
        width: 100%;
    }
}

* {
    margin: 0;
}

a {
    color: $text-color;
    text-decoration: none;
}

header {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 60px;

    a {
        position: absolute;
        left: 20px;
        font-size: larger;
        color: lighten($text-color, 30%);
    }

    img {
        width: 150px;
        height: auto;
    }
}

.bloc-location {
    height: 50px;
    background-color: darken($background-color-primary, 10%);
    box-shadow: inset 0 3px 3px 0 darken($background-color-primary, 30%);

    display: flex;
    align-items: center;
    justify-content: center;
    gap: 15px;

    &__icon {
        color: lighten($text-color, 30%);
    }

    &__text {
        @include text-16-500(lighten($text-color, 30%));
    }
}

.bloc-catch {
    padding: 40px;
    background-color: $background-color-secondary;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 15px;

    @include title-element {
        text-align: center;
    }

    &__text {
        min-width: 100vw;
        text-align: center;
    }

    @include action-button {
        margin-top: 10px;
    }
}

.bloc-manual {
    padding: 40px 20px;

    display: flex;
    flex-direction: column;
    gap: 20px;

    @include title-element;

    &__button {
        margin-left: 10px;
        position: relative;
        padding: 25px;
        border-radius: 20px;
        background-color: $background-color-secondary;
        
        @include shadow-element;

        display: flex;
        align-items: center;
        gap: 20px;

        &__index {
            position: absolute;
            left: -10px;
            color: white;
            font-size: 14px;
            font-weight: 500;
            text-align: center;
            background-color: $color-primary;
            border-radius: 100%;
            padding: 4px 7px 2px;
        }

        &__icon {
            padding-left: 10px;
            color: lighten($text-color, 30%);
        }

        &__text {
            @include text-16-500;
        }
        
    }
}

.bloc-restaurants {
    padding: 50px 20px;
    background-color: $background-color-secondary;

    display: flex;
    flex-direction: column;
    gap: 20px;

    @include title-element;

    &__card {
        position: relative;
        padding-bottom: 20px;
        border-radius: 20px;
        @include shadow-element;

        &__img {
            top: -10px;
            width: 100%;
            height: 160px;
            object-fit: cover;
            border-radius: 20px 20px 0 0;
        }

        &__name {
            margin: 10px 0 0 10px;
            font-weight: 600;
        }

        &__place {
            margin: 5px 0 0 10px;
        }

        &__new {
            position: absolute;
            top: 10px;
            right: 10px;
            color: #3E9C7D;
            width: max-content;
            padding: 6px 12px;
            border-radius: 3px;
            background-color: #9EE2CE;
            font-size: 14px;
            font-weight: 500;
            display: none;
        }

        &--new {
            .bloc-restaurants__card__new {
                display: unset;
            }
        }

        @include icon-like(0, 20px, 30px, 0);
    }
}

.main-menu {
    div:first-child {
        background-repeat: no-repeat;
        background-position-x: center;
        background-size: 110%;
    
        display: flex;
    }
}

.bloc-menu {
    position: relative;
    background-color: $background-color-secondary;
    border-radius: 40px 40px 0 0;
    margin-top: 59vw;
    padding: 40px 20px;
    width: 100%;

    display: flex;
    flex-direction: column;

    &__title {
        margin-bottom: 30px;
        font-family: Shrikhand;
        font-size: x-large;
    }

    @include icon-like(45px, 40px, 0, 0);

    &__category {
        margin-bottom: 40px;

        &__title {
            text-transform: uppercase;
            font-weight: 300;
            font-size: 16px;
        
            width: 40px;
            padding-bottom: 5px;
            border-bottom: 3px solid #9EE2CE;
        }

        &__product {
            background-color: $background-color-primary;
            @include shadow-element;
            margin-top: 15px;
            padding: 10px 20px 10px 10px;
            border-radius: 15px;
        
            div {
                display: flex;
                justify-content: space-between;
            }
                
            &__title {
                margin-bottom: 5px;
                font-weight: 500;
                font-size: 18px;
            }
        
            &__text {
                width: 85%;
                font-size: 15px;
                white-space: nowrap;
                overflow: hidden;
                text-overflow: ellipsis;
            }
        
            &__price {
                font-weight: 500;
                font-size: 15px;
            }
        }
    }

    @include action-button {
        width: max-content;
        margin: auto;
    }
}

footer {
    color: invert($text-color);
    font-size: 15px;
    font-weight: 400;
    background-color: $background-color-terciary;
    padding: 20px 20px 40px;

    display: flex;
    flex-direction: column;
    gap: 8px;

    h1 {
        margin-bottom: 10px;
        font-family: Shrikhand;
        font-size: large;
    }

    i {
        margin-right: 10px;
    }

    a {
        color: invert($text-color);
    }
}

